load("@rules_cc//cc:defs.bzl", "cc_library")

test_suite(
    name = "unit",
    tests = [
        ":call",
        ":dict",
        ":expressions",
        ":keywords",
        ":lists",
        ":numbers",
        ":punctuation",
        ":slices",
        ":statements",
        ":strings",
    ])

# LEXIS
cc_test(
    name = "keywords",
    srcs = [
        "lex_keywords.c",
        "lex_keywords.h",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Iexternal/moonlark/vendored/logc",
        "-Ivendored/unity",
        "-Iexternal/moonlark/vendored/unity",
        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

cc_test(
    name = "numbers",
    srcs = [
        "lex_numbers.c",
        "lex_numbers.h",
        # "//sealark:debug.c",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Iexternal/moonlark/vendored/logc",
        "-Ivendored/unity",
        "-Iexternal/moonlark/vendored/unity",
        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

cc_test(
    name = "punctuation",
    srcs = [
        "lex_punctuation.c",
        "lex_punctuation.h",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Ivendored/unity",
        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/logc",
        "-Iexternal/moonlark/vendored/unity",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

cc_test(
    name = "strings",
    srcs = [
        "lex_strings.c",
        "lex_strings.h",
        # "//sealark:debug.c",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Ivendored/unity",
        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/logc",
        "-Iexternal/moonlark/vendored/unity",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

# SYNTAX
cc_test(
    name = "call",
    srcs = [
        "syntax_call_expr.c",
        "syntax_call_expr.h",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Ivendored/unity",
        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/logc",
        "-Iexternal/moonlark/vendored/unity",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

cc_test(
    name = "dict",
    srcs = [
        "syntax_dict.c",
        "syntax_dict.h",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Ivendored/unity",
        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/logc",
        "-Iexternal/moonlark/vendored/unity",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

cc_test(
    name = "expressions",
    srcs = [
        "syntax_expressions.c",
        "syntax_expressions.h",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Ivendored/unity",
        "-Ivendored/uthash",

        "-Iexternal/moonlark/vendored/logc",
        "-Iexternal/moonlark/vendored/unity",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

cc_test(
    name = "lists",
    srcs = [
        "syntax_lists.c",
        "syntax_lists.h",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Ivendored/unity",
        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/logc",
        "-Iexternal/moonlark/vendored/unity",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

cc_test(
    name = "slices",
    srcs = [
        "syntax_slices.c",
        "syntax_slices.h",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Ivendored/unity",
        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/logc",
        "-Iexternal/moonlark/vendored/unity",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

cc_test(
    name = "statements",
    srcs = [
        "syntax_statements.c",
        "syntax_statements.h",
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/test/unit",
        "-I$(GENDIR)/external/moonlark/test/unit",

        "-I$(GENDIR)/sealark",
        "-I$(GENDIR)/external/moonlark/sealark",

        "-Ivendored/logc",
        "-Ivendored/unity",
        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/logc",
        "-Iexternal/moonlark/vendored/unity",
        "-Iexternal/moonlark/vendored/uthash",
    ],
    linkstatic = 1,
    deps = [
        "//sealark",
        "//vendored/logc",
        "//vendored/unity",
        "//vendored/uthash",
    ],
)

################################################################
genrule(
    name = "mkhdrs",
    srcs = [
        "//sealark:debug.c",
        # "roundtrip_starlark.c",
        # "roundtrip_moonlark.c",
        # "roundtrip_helper.c",
        "lex_keywords.c",
        "lex_numbers.c",
        "lex_punctuation.c",
        "lex_strings.c",
        "syntax_call_expr.c",
        "syntax_dict.c",
        "syntax_expressions.c",
        "syntax_lists.c",
        "syntax_slices.c",
        "syntax_statements.c",
        # "lex_file.c",
        # "lua_file.c",
        # "parse_file.c",
    ],
    outs = [
        "lex_keywords.h",
        "lex_numbers.h",
        "lex_punctuation.h",
        "lex_strings.h",
        "syntax_call_expr.h",
        "syntax_dict.h",
        "syntax_expressions.h",
        "syntax_lists.h",
        "syntax_slices.h",
        "syntax_statements.h",
        # "lex_file.h",
        # "lua_file.h",
        # "parse_file.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location lex_strings.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location //sealark:debug.c) \\",
        "    $(location lex_keywords.c) \\",
        "    $(location lex_numbers.c) \\",
        "    $(location lex_punctuation.c) \\",
        "    $(location lex_strings.c) \\",
        "    $(location syntax_call_expr.c) \\",
        "    $(location syntax_dict.c) \\",
        "    $(location syntax_expressions.c) \\",
        "    $(location syntax_lists.c) \\",
        "    $(location syntax_slices.c) \\",
        "    $(location syntax_statements.c)",
        # "    $(location lex_file.c) \\",
        # "    $(location lua_file.c) \\",
        # "    $(location parse_file.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
