load("@rules_cc//cc:defs.bzl", "cc_library")

# exports_files(["moonlark.c"])

##########
cc_library(
    name  = "moonlark",
    alwayslink = True,
    linkstatic = 1,
    srcs  = [
        "libmoonlark.c",
        "libmoonlark.h",
        "//src/lib/starlark:debug.c",
        "//vendored/logc:log.h",
    ],
    hdrs = [
        "moonlark.h"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = [
        "-std=c11",
        "-pedantic-errors",
        "-g", "-O0",

        "-I$(GENDIR)/src/lbazel",

        "-Isrc/lib/starlark",  # starlark.h
        "-I$(GENDIR)/src/lib/starlark",  # starlark.h
        "-I$(GENDIR)/external/moonlark/src/lib/starlark",  # starlark.h

        "-Isrc/lib/moonlark", # moonlark_*.h
        "-I$(GENDIR)/src/lib/moonlark", # moonlark_*.h
        "-I$(GENDIR)/external/moonlark/src/lib/moonlark",

        "-Ivendored/uthash",
        "-Iexternal/moonlark/vendored/uthash",

        "-Ivendored/logc",
        "-Iexternal/moonlark/vendored/logc",

        "-Ivendored/lua-5.4.3/src",
        "-Iexternal/moonlark/vendored/lua-5.4.3/src",

    ],
    deps = [
        "//src/lbazel",
        "//src/lib/starlark",
        # "//external/lua/lib:lua",
        "//vendored/lua-5.4.3/src:lua",
        "//vendored/logc",
        "//vendored/uthash",
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    visibility = ["//visibility:public"],
    srcs = [
        "libmoonlark.c",
        "//src/lbazel:lbazel.c",
        "//src/lib/starlark:debug.c",
        "//src/lib/starlark:starlark.h",
    ],
    outs = [
        "libmoonlark.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location libmoonlark.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "SRC2=$(location //src/lib/starlark:debug.c)",
        "SRCDIR2=`dirname $$SRC2`",
        "$(location //vendored/makeheaders) \\",
        "    $(location //src/lib/starlark:debug.c) \\",
        "    $(location //src/lbazel:lbazel.c) \\",
        "    $(location //src/lib/starlark:starlark.h) \\",
        "    $(location libmoonlark.c)",
        "cp $$SRCDIR1/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"]
)

genrule(
    name = "mkhdrs-export",
    visibility = ["//visibility:public"],
    srcs = [
        "libmoonlark.c",
        "//src/lib/starlark:debug.c",
        # "//src/lib/starlark:constants.c",
        "//src/lib/starlark:parse.c",
        "//src/lib/starlark:lexis.c",
        "//src/lib/starlark:nodes.c",
        "//src/lib/starlark:syntaxis.h",
        "//src/lib/starlark:serialize.c",
    ],
    outs = [
        "moonlark.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location libmoonlark.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) -H \\",
        "    $(location libmoonlark.c) \\",
        "    $(location //src/lib/starlark:lexis.c) \\",
        "    $(location //src/lib/starlark:nodes.c) \\",
        "    $(location //src/lib/starlark:parse.c) \\",
        "    $(location //src/lib/starlark:serialize.c) \\",
        "    $(location //src/lib/starlark:syntaxis.h) \\",
        "    > $@"
    ]),
    tools = ["//vendored/makeheaders"]
)
