load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files(glob(["*.c"]))

##########
cc_library(
    name  = "starlark",
    alwayslink = True,
    linkstatic = 1,
    srcs  = [
        # "constants.c",
        # "constants.h",
        "nodes.c",
        "nodes.h",
        "parse.c",
        "parse.h",          # local impl hdr
        "serialize.c",
        "serialize.h",
        "@uthash//:include",
        "//vendored/logc:log.h"
   ],
    hdrs = [
        "starlark.h",           # api hdr
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = [
        "-std=c11",
        "-g", "-O0",
        "-pedantic-errors",
        "-I", ".",
        "-I", "$(GENDIR)/src/lib/starlark",
        "-I", "$(GENDIR)/external/libstarlark/src",

        "-I", "external/uthash/include",

        "-I", "vendored/logc",
        "-I", "external/libstarlark/vendored/logc",
    ],
    deps = [
        ":lexis",
        ":syntaxis",
        "//vendored/logc"
    ],
    visibility = ["//visibility:public"]
)

##########
cc_library(
    name  = "syntaxis",
    visibility = ["//visibility:public"],
    srcs  = [
        "syntaxis.c",
        "syntaxis.h",
        "nodes.c",
        "nodes.h",
        "//vendored/logc:log.h",
        "@uthash//:include"
    ],
    copts = [
        "-std=c11",
        # "-g",

        "-I", ".",              # syntaxis.h

        # mkhdrs output:
        "-I", "$(GENDIR)/src/lib/starlark",
        "-I", "$(GENDIR)/external/libstarlark/src",

        "-I", "vendored/logc",
        "-I", "external/libstarlark/vendored/logc",

        "-I", "external/uthash/include",

        "-U", "NDEBUG"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    linkstatic = 1,
    deps = [
        "//vendored/logc"
    ]
)

########
genrule(
    name = "gen_syntaxis",
    srcs = [
        "syntaxis.y",
        "//vendored/lemon:lempar.c"
    ],
    tools = ["//vendored/lemon"],
    outs  = [
        "syntaxis.c",
        "syntaxis.out"
    ],
    cmd   = "\n".join([
        "$(location //vendored/lemon) -m \\",
        "$(location syntaxis.y) \\",
        "-T$(location //vendored/lemon:lempar.c) \\",
        "-DTEST \\",
        "-d$(RULEDIR)",
    ]),
    visibility = ["//visibility:public"]
)

###########
cc_library(
    name  = "lexis",
    visibility = ["//visibility:public"],
    srcs  = [
        "lexis.c",
        "lexis.h",
        "nodes.c",
        "nodes.h",
        "debug.c",
        "debug.h",
        "//vendored/logc:log.h",
        "@uthash//:include",
    ],
    copts = [
        "-std=c11",
        "-I", "src",

        # mkhdrs output:
        "-I", "$(GENDIR)/src/lib/starlark",
        "-I", "$(GENDIR)/external/libstarlark/src",

        "-I", "external/uthash/include",

        "-I", "vendored/logc",
        "-I", "external/libstarlark/vendored/logc",
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    linkstatic = 1,
    deps = [
        "//vendored/logc"
    ]
)

########
genrule(
    name = "gen_lexis",
    srcs = [
        "lexis.re",
        # "test.re",
    ],
    tools = ["//external/re2c"],
    outs  = [
        "lexis.c"
    ],
    cmd   = "\n".join([
        "for f in $(locations //external/re2c)",
        "do",
        "    if [ -f $$f ]",
        "    then",
        "        if [ re2c = `basename $$f` -a -x $$f ]",
        "        then",
        "            break",
        "        fi",
        "    fi",
        "done",
        "$$f --conditions --tags -o $(@D)/lexis.c $(location lexis.re)",
    ]),
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        # "constants.c",
        "parse.c",
        "lexis.c",
        "nodes.c",
        "syntaxis.c",
        "serialize.c",
        "debug.c",
        "@uthash//:include",
    ],
    outs = [
        # "constants.h",
        "parse.h",
        "lexis.h",
        "nodes.h",
        "syntaxis.h",
        "serialize.h",
        "debug.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location parse.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) \\",
        "    $(locations @uthash//:include) \\",
        # "    $(location constants.c) \\",
        "    $(location parse.c) \\",
        "    $(location lexis.c) \\",
        "    $(location nodes.c) \\",
        "    $(location syntaxis.c) \\",
        "    $(location serialize.c) \\",
        "    $(location debug.c) ",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)

genrule(
    name = "mkhdrs-export",
    srcs = [
        "constants.c",
        "parse.c",
        "lexis.c",
        "nodes.c",
        "syntaxis.h",
        "serialize.c",
        # "debug.c",
        # "test_lex.c",
        # "test_parse.c",
        "@uthash//:include",
    ],
    outs = [
        "starlark.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location parse.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) -H \\",
        "    $(locations @uthash//:include) \\",
        "    $(location constants.c) \\",
        "    $(location lexis.c) \\",
        "    $(location nodes.c) \\",
        "    $(location parse.c) \\",
        "    $(location serialize.c) \\",
        "    $(location syntaxis.h) \\",
        # "    $(location debug.c) \\",
        "    > $@",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)
